Something went wrong while setting issue due date.
igt@xe_exec_balancer@* - abort - DEBUG_RWSEMS_WARN_ON(sem->magic != sem)
Dmesg
<6> [464.861626] Console: switching to colour dummy device 80x25
<6> [464.861851] [IGT] xe_exec_balancer: executing
<6> [464.867527] [IGT] xe_exec_balancer: starting subtest once-cm-parallel-userptr-invalidate-race
<4> [465.376558] ------------[ cut here ]------------
<4> [465.376594] DEBUG_RWSEMS_WARN_ON(sem->magic != sem): count = 0x6b6b6b6b6b6b6b6b, magic = 0x6b6b6b6b6b6b6b6b, owner = 0x6b6b6b6b6b6b6b6b, curr 0xffff888112ac49c0, list not empty
<4> [465.376615] WARNING: CPU: 2 PID: 1468 at kernel/locking/rwsem.c:1364 up_write+0x15c/0x1e0
<4> [465.376638] Modules linked in: mei_gsc intel_rapl_msr intel_rapl_common intel_uncore_frequency intel_uncore_frequency_common x86_pkg_temp_thermal intel_powerclamp snd_sof_pci_intel_tgl snd_sof_intel_hda_common coretemp snd_soc_hdac_hda snd_sof_pci snd_sof_xtensa_dsp snd_sof_intel_hda snd_sof kvm_intel snd_sof_utils snd_soc_acpi_intel_match snd_soc_acpi snd_intel_dspcfg kvm snd_hda_codec snd_hwdep joydev cmdlinepart snd_soc_core crct10dif_pclmul crc32_pclmul snd_compress polyval_clmulni spi_nor snd_sof_intel_hda_mlink polyval_generic ghash_clmulni_intel snd_hda_ext_core mei_pxp mei_hdcp mtd hid_generic nls_iso8859_1 xe sha512_ssse3 snd_hda_core sha256_ssse3 wmi_bmof sha1_ssse3 drm_gpuvm aesni_intel snd_pcm crypto_simd gpu_sched cryptd drm_ttm_helper mxm_wmi ttm snd_seq rapl i2c_algo_bit drm_suballoc_helper snd_seq_device drm_exec intel_cstate usbhid drm_display_helper snd_timer hid drm_kunit_helpers snd drm_kms_helper video spi_intel_pci efi_pstore kunit igc mei_me soundcore i2c_i801 mei drm_buddy spi_intel i2c_smbus
<4> [465.377079] intel_pmc_core intel_vsec wmi pmt_telemetry acpi_tad acpi_pad pinctrl_alderlake pmt_class mac_hid sch_fq_codel msr parport_pc ppdev lp parport drm ip_tables x_tables autofs4
<4> [465.377180] CPU: 2 PID: 1468 Comm: kworker/u80:67 Tainted: G U W 6.9.0-rc4-xe #1
<4> [465.377194] Hardware name: Micro-Star International Co., Ltd. MS-7D25/PRO Z690-A DDR4(MS-7D25), BIOS 1.10 12/13/2021
<4> [465.377203] Workqueue: xe-ordered-wq preempt_rebind_work_func [xe]
<4> [465.377566] RIP: 0010:up_write+0x15c/0x1e0
<4> [465.377583] Code: f1 bf 82 48 39 c2 48 c7 c2 ed f0 bf 82 48 c7 c0 f3 1b c1 82 48 0f 45 c2 49 8b 14 24 65 4c 8b 0d 3a 63 eb 7e 50 e8 a4 34 f5 ff <0f> 0b 5e eb 93 49 8b 54 24 58 49 8d 44 24 58 4d 8b 44 24 08 c6 05
<4> [465.377594] RSP: 0018:ffffc90002c07c98 EFLAGS: 00010286
<4> [465.377608] RAX: 0000000000000000 RBX: 0000000000000000 RCX: 0000000000000027
<4> [465.377616] RDX: 0000000000000027 RSI: 00000001000032cc RDI: ffff88888ef31a48
<4> [465.377626] RBP: ffffc90002c07cb0 R08: 0000000000000000 R09: 00000001000032cc
<4> [465.377634] R10: ffffc90002c07a80 R11: ffff8888afa8a320 R12: ffff888120f10c10
<4> [465.377642] R13: ffff888100246800 R14: ffff888120f10800 R15: ffff888120f10ee0
<4> [465.377651] FS: 0000000000000000(0000) GS:ffff88888ef00000(0000) knlGS:0000000000000000
<4> [465.377660] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [465.377669] CR2: 00007ffdf384dca8 CR3: 0000000012254000 CR4: 0000000000750ef0
<4> [465.377679] PKRU: 55555554
<4> [465.377686] Call Trace:
<4> [465.377694] <TASK>
<4> [465.377705] ? show_regs+0x67/0x70
<4> [465.377719] ? up_write+0x15c/0x1e0
<4> [465.377734] ? __warn+0x8e/0x1b0
<4> [465.377750] ? up_write+0x15c/0x1e0
<4> [465.377768] ? report_bug+0x1b7/0x1d0
<4> [465.377784] ? irq_work_queue+0x10/0x50
<4> [465.377804] ? handle_bug+0x46/0x80
<4> [465.377822] ? exc_invalid_op+0x19/0x70
<4> [465.377838] ? asm_exc_invalid_op+0x1b/0x20
<4> [465.377873] ? up_write+0x15c/0x1e0
<4> [465.377891] ? up_write+0x15c/0x1e0